--- a/FoodSaver/Views/ItemDetailPage.xaml
+++ b/FoodSaver/Views/ItemDetailPage.xaml
@@ -5,10 +5,10 @@
              Title="{Binding Title}">
 
     <StackLayout Spacing="20" Padding="15">
-        <Label Text="Text:" FontSize="Medium" />
-        <Label Text="{Binding Text}" FontSize="Small"/>
-        <Label Text="Description:" FontSize="Medium" />
-        <Label Text="{Binding Description}" FontSize="Small"/>
+        <Label Text="Food:" FontSize="Large" TextColor="Navy"/>
+        <Label Text="{Binding Text}" FontSize="Large"/>
+        <Label Text="Expiration Date::" FontSize="Large" TextColor="Navy" />
+        <Label Text="{Binding Description}" FontSize="Large"/>
     </StackLayout>
     
 </ContentPage>
