--- a/FoodSaver/Views/NewItemPage.xaml
+++ b/FoodSaver/Views/NewItemPage.xaml
@@ -8,10 +8,10 @@
              ios:Page.UseSafeArea="true">
     <ContentPage.Content>
         <StackLayout Spacing="3" Padding="15">
-            <Label Text="Text" FontSize="Medium" />
-            <Entry Text="{Binding Text, Mode=TwoWay}" FontSize="Medium" />
-            <Label Text="Description" FontSize="Medium" />
-            <Editor Text="{Binding Description, Mode=TwoWay}" AutoSize="TextChanges" FontSize="Medium" Margin="0" />
+            <Label Text="Food item:" FontSize="Large" FontAttributes="Bold" TextColor="DarkSlateGray"/>
+            <Entry Text="{Binding Text, Mode=TwoWay}" FontSize="Large" TextColor="DarkSlateGray"/>
+            <Label Text="Expires:" FontSize="Large" FontAttributes="Bold" TextColor="DarkSlateGray"/>
+            <Editor Text="{Binding Description, Mode=TwoWay}" AutoSize="TextChanges" FontSize="Large" Margin="0" TextColor="DarkSlateGray"/>
             <StackLayout Orientation="Horizontal">
                 <Button Text="Cancel" Command="{Binding CancelCommand}" HorizontalOptions="FillAndExpand"></Button>
                 <Button Text="Save" Command="{Binding SaveCommand}" HorizontalOptions="FillAndExpand"></Button>
