--- a/FoodSaver/Views/ItemsPage.xaml
+++ b/FoodSaver/Views/ItemsPage.xaml
@@ -21,13 +21,13 @@
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <StackLayout Padding="10" x:DataType="model:Item">
-                        <Label Text="{Binding Text} " 
+                        <Label Text="{Binding Food} " 
                             LineBreakMode="NoWrap" 
                             Style="{DynamicResource ListItemTextStyle}" 
                             FontSize="19" 
                             FontAttributes="Bold"
                             TextColor="DarkSlateGray"/>
-                        <Label Text="{Binding Description}" 
+                        <Label Text="{Binding ExpirationDate}" 
                             LineBreakMode="NoWrap"
                             Style="{DynamicResource ListItemDetailTextStyle}"
                             FontSize="19" 
