--- a/FoodSaver/Views/ItemDetailPage.xaml
+++ b/FoodSaver/Views/ItemDetailPage.xaml
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-    
+
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FoodSaver.Views.ItemDetailPage"
-             Title="{Binding Title}">
+             Title="Did you finish this food?">
             
 
     <StackLayout Spacing="20" Padding="15">
@@ -11,6 +11,9 @@
         <Label Text="{Binding Food}" FontSize="Large" TextColor="DarkSlateGray"/>
         <Label Text="Eat by:" FontSize="Large" FontAttributes="Bold" TextColor="DarkSlateGray" />
         <Label Text="{Binding ExpirationDate}" FontSize="Large" TextColor="DarkSlateGray"/>
+        
+        <!--Delete food from db when item has been eaten-->
+        <Button Text="Finished" Command="{Binding DeleteCommand}" HorizontalOptions="FillAndExpand"/>        
     </StackLayout>
     
 </ContentPage>
