--- a/FoodSaver/Views/NewItemPage.xaml
+++ b/FoodSaver/Views/NewItemPage.xaml
@@ -9,9 +9,11 @@
     <ContentPage.Content>
         <StackLayout Spacing="3" Padding="15">
             <Label Text="Food item:" FontSize="Large" FontAttributes="Bold" TextColor="DarkSlateGray"/>
-            <Entry Text="{Binding Text, Mode=TwoWay}" FontSize="Large" TextColor="DarkSlateGray"/>
+            <Entry Text="{Binding Food, Mode=TwoWay}" FontSize="Large" TextColor="DarkSlateGray"/>
             <Label Text="Expires:" FontSize="Large" FontAttributes="Bold" TextColor="DarkSlateGray"/>
-            <Editor Text="{Binding Description, Mode=TwoWay}" AutoSize="TextChanges" FontSize="Large" Margin="0" TextColor="DarkSlateGray"/>
+            <!--<Editor Text="{Binding ExpirationDate, Mode=TwoWay}" AutoSize="TextChanges" FontSize="Large" Margin="0" TextColor="DarkSlateGray"/>-->
+            <DatePicker Date="{Binding ExpirationDate, Mode=TwoWay}" Format="D" />
+            <TimePicker Time="{Binding ExpirationTime, Mode=TwoWay}" />
             <StackLayout Orientation="Horizontal">
                 <Button Text="Cancel" Command="{Binding CancelCommand}" HorizontalOptions="FillAndExpand"></Button>
                 <Button Text="Save" Command="{Binding SaveCommand}" HorizontalOptions="FillAndExpand"></Button>
