--- a/FoodSaver/Views/LoginPage.xaml
+++ b/FoodSaver/Views/LoginPage.xaml
@@ -9,7 +9,8 @@
     <ContentPage.Content>
         <StackLayout Padding="10,0,10,0" VerticalOptions="Center">
             <Label Text="Food Saver" FontSize="Title" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="#0F9D58"/>
-            <Image Source="kitchen.png" HeightRequest="300"/>
+            <Label Text="A Brilliant App for Saving Food" FontSize="Subtitle" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="Gray"/>
+            <Image Source="GetCooking.png" HeightRequest="350" />
             <Entry x:Name="Username" Text=" {Binding Username}" Placeholder="Username" PlaceholderColor="LightSlateGray" HeightRequest="40" Keyboard="Text" TextColor="Black"/>
             <Entry x:Name="Password" Text=" {Binding Password}" Placeholder="Password" PlaceholderColor="LightSlateGray" HeightRequest="40" IsPassword="True" TextColor="Black"/>
             <Button VerticalOptions="Center" Text="Login" Command="{Binding LoginCommand}" BackgroundColor="#0F9D58" Padding="10,0,10,1"/>
