Added login functionality. The credientals are hard coded in Admin for the username and Admin for the password.

--- a/FoodSaver/Views/LoginPage.xaml
+++ b/FoodSaver/Views/LoginPage.xaml
@@ -8,12 +8,27 @@
              Shell.NavBarIsVisible="False">
     <ContentPage.Content>
         <StackLayout Padding="10,0,10,0" VerticalOptions="Center">
+            
             <Label Text="Food Saver" FontSize="Title" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="#0F9D58"/>
-            <Label Text="A Brilliant App for Saving Food" FontSize="Subtitle" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="Gray"/>
+            <Label Text="A Brilliant App for Managing Food" FontSize="Subtitle" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="Gray"/>
+            
             <Image Source="GetCooking.png" HeightRequest="350" />
+            
             <Entry x:Name="Username" Text=" {Binding Username}" Placeholder="Username" PlaceholderColor="LightSlateGray" HeightRequest="40" Keyboard="Text" TextColor="Black"/>
             <Entry x:Name="Password" Text=" {Binding Password}" Placeholder="Password" PlaceholderColor="LightSlateGray" HeightRequest="40" IsPassword="True" TextColor="Black"/>
-            <Button VerticalOptions="Center" Text="Login" Command="{Binding LoginCommand}" BackgroundColor="#0F9D58" Padding="10,0,10,1"/>
+            <Button VerticalOptions="Center" Text="Login" Clicked="LoginButton_Clicked" BackgroundColor="#0F9D58" Padding="10,0,10,1"/>
+            
+            <Label HorizontalOptions="Center">
+                <Label.FormattedText>
+                    <FormattedString>
+                        <Span Text="Don't have an account? " TextColor="Gray"/>
+                        <Span Text="Register" TextColor="Gray" FontAttributes="Bold" TextDecorations="Underline"/>
+                    </FormattedString>
+                </Label.FormattedText>
+                <Label.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="RegisterTappedGesture"/>
+                </Label.GestureRecognizers>
+            </Label>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
