--- a/FoodSaver/AppShell.xaml
+++ b/FoodSaver/AppShell.xaml
@@ -32,8 +32,8 @@
     <TabBar>
         <ShellContent Title="Home" Icon="home.png" Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}" />
         <ShellContent Title="Go to Kitchen" Icon="fridge.png" ContentTemplate="{DataTemplate local:ItemsPage}" />
+        <ShellContent Title="Settings" Icon="Settings.png"  ContentTemplate="{DataTemplate local:Settings}" />
     </TabBar>
-
     <!--
         If you would like to navigate to this content you can do so by calling
         await Shell.Current.GoToAsync("//LoginPage");
