--- a/FoodSaver/Views/LoginPage.xaml
+++ b/FoodSaver/Views/LoginPage.xaml
@@ -7,7 +7,7 @@
              x:Class="FoodSaver.Views.LoginPage"
              Shell.NavBarIsVisible="False">
     <ContentPage.Content>
-        <StackLayout Padding="10,50,10,0" >
+        <StackLayout Padding="10,50,10,0" BackgroundColor="White">
             
             <Label Text="Food Saver" FontSize="Title" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="#0F9D58"/>
             <Label Text="A Brilliant App for Managing Food" FontSize="Subtitle" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="Gray"/>
