--- a/FoodSaver/Views/ItemsPage.xaml
+++ b/FoodSaver/Views/ItemsPage.xaml
@@ -29,7 +29,7 @@
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="Auto" />S
+                            <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
                         <Label Grid.Row="0" Grid.Column="0" Text="Tap " FontSize="Medium" TextColor="Black" />
