--- a/FoodSaver/Views/SettingsPage.xaml
+++ b/FoodSaver/Views/SettingsPage.xaml
@@ -1,14 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="FoodSaver.Views.Settings">
+             x:Class="FoodSaver.Views.Settings"
+             Title="Settings">
+                
     <ContentPage.Content>
-        <StackLayout Padding="10,50,10,0" >
-
-            <Label Text="Settings" FontSize="Title" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="#0F9D58"/>
-            
-
-            <Button VerticalOptions="Center" Text="Logout" Clicked="LogoutButton_Clicked" BackgroundColor="#0F9D58" Padding="10,0,10,0"/>
+        <StackLayout Padding="10,50,10,0" Spacing="25" >
+            <Button VerticalOptions="Center" Text="Logout" Clicked="LogoutButton_Clicked" BackgroundColor="#FF0000" Padding="10,0,10,0"/>
 
         </StackLayout>
     </ContentPage.Content>
