--- a/FoodSaver/Views/ItemsPage.xaml
+++ b/FoodSaver/Views/ItemsPage.xaml
@@ -10,10 +10,7 @@
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="+ Add item" Command="{Binding AddItemCommand}" />
     </ContentPage.ToolbarItems>
-    <!--
-      x:DataType enables compiled bindings for better performance and compile time validation of binding expressions.
-      https://docs.microsoft.com/xamarin/xamarin-forms/app-fundamentals/data-binding/compiled-bindings
-    -->
+
     <RefreshView x:DataType="local:ItemsViewModel" Command="{Binding LoadItemsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
         
         <CollectionView x:Name="ItemsListView" ItemsSource="{Binding Items}" SelectionMode="None">
@@ -51,6 +48,11 @@
                             FontAttributes="Bold"
                             TextColor="DarkSlateGray"/>
                         <Label Text="{Binding ExpirationDate}" 
+                            LineBreakMode="NoWrap"
+                            Style="{DynamicResource ListItemDetailTextStyle}"
+                            FontSize="19" 
+                            TextColor="DarkSlateGray"/>
+                        <Label Text="{Binding ExpirationTime}" 
                             LineBreakMode="NoWrap"
                             Style="{DynamicResource ListItemDetailTextStyle}"
                             FontSize="19" 
