--- a/FoodSaver/Views/AboutPage.xaml
+++ b/FoodSaver/Views/AboutPage.xaml
@@ -16,7 +16,9 @@
     </ContentPage.Resources>
     <ScrollView>
         <StackLayout Orientation="Vertical">
-            <Label HorizontalTextAlignment="Center" Text="Welcome to Food Saver!" FontSize="27" TextColor="#035A85" FontAttributes="Bold" Margin="0,25,0,0"/>
+            <Image Source="foodSAVER.png" VerticalOptions="Center" HeightRequest="600" />
+
+            <!--<Label HorizontalTextAlignment="Center" Text="Welcome to Food Saver!" FontSize="27" TextColor="#035A85" FontAttributes="Bold" Margin="0,25,0,0"/>-->
             
             <Image Source="BreakfastMeal.png" VerticalOptions="Center" HeightRequest="300" />
             <Label HorizontalTextAlignment="Center" Text="Reduce Waste!" FontSize="20" TextColor="#035A85" FontAttributes="Bold"/>
