--- a/FoodSaver/Views/LoginPage.xaml
+++ b/FoodSaver/Views/LoginPage.xaml
@@ -9,7 +9,8 @@
     <ContentPage.Content>
         <StackLayout Padding="10,50,10,0" BackgroundColor="White">
             
-            <Label Text="Food Saver" FontSize="Title" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="#0F9D58"/>
+            <!--<Label Text="Food Saver" FontSize="Title" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="#0F9D58"/>-->
+            <Image Source="title.png"  />
             <Label Text="A Brilliant App for Managing Food" FontSize="Subtitle" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="Gray"/>
             
             <Image Source="GetCooking.png" HeightRequest="250" />
