--- a/FoodSaver/Views/LoginPage.xaml
+++ b/FoodSaver/Views/LoginPage.xaml
@@ -8,11 +8,10 @@
              Shell.NavBarIsVisible="False">
     <ContentPage.Content>
         <StackLayout Padding="10,50,10,0" BackgroundColor="White">
-            <Image Source="title.png"  />
-            <Label Text="A Brilliant App for Managing Food" FontSize="Subtitle" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="Gray"/>
-            
-            <Image Source="GetCooking.png" HeightRequest="250" />
-            
+            <Label Text="Food Saver" FontSize="40" HorizontalOptions="Center" FontFamily="OpenSansBold" TextColor="#00ADDF"/>
+           <Image Source="GetCooking.png" HeightRequest="250" />
+            <Label Text="A Brilliant App for Managing Food" FontSize="18" FontFamily="NunitoLight" HorizontalTextAlignment="Center" TextColor="Gray"/>
+         
             <Entry x:Name="Username" Text=" {Binding Username}" Placeholder="Username" PlaceholderColor="LightSlateGray" HeightRequest="40" Keyboard="Text" TextColor="Black"/>
             <Entry x:Name="Password" Text=" {Binding Password}" Placeholder="Password" PlaceholderColor="LightSlateGray" HeightRequest="40" IsPassword="True" TextColor="Black"/>
             <Button VerticalOptions="Center" Text="Login" Clicked="LoginButton_Clicked" BackgroundColor="#0F9D58" Padding="10,0,10,0"/>
@@ -26,7 +25,7 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                 <Label Grid.Row="0" Grid.Column="0" Text="Remember my login" TextColor="Gray" HorizontalOptions="Center"/>
-                <Switch Grid.Row="0" Grid.Column="1"  x:Name="RememberMe" HorizontalOptions="Center" />
+                <Switch Grid.Row="0" Grid.Column="1"  x:Name="RememberMe" HorizontalOptions="Center" OnColor="#8BB166" ThumbColor="#FFB300" />
             </Grid> 
                         
             <Label HorizontalOptions="Center">
