--- a/FoodSaver/Views/AboutPage.xaml
+++ b/FoodSaver/Views/AboutPage.xaml
@@ -18,21 +18,21 @@
         <StackLayout Orientation="Vertical">
             <Image Source="FoodSaverLanding.png" VerticalOptions="Center" HeightRequest="550" />
 
-            <Image Source="BreakfastMeal.png" VerticalOptions="Center" HeightRequest="300" />
+            <Image Source="DontLeaveFoodBehind.png" VerticalOptions="Center" HeightRequest="300" Margin="0,25,0,25"/>
             <Label HorizontalTextAlignment="Center" Text="Reduce Waste!" FontSize="20" TextColor="#035A85" FontAttributes="Bold"/>
             <Label Text="You can reduce food waste by tracking what's in the kitchen and using it before it expires." HorizontalTextAlignment="Center" FontSize="18" TextColor="Black" Padding="20, 0, 20, 10"  />
-            
-            <Image Source="DogWait.png" VerticalOptions="Center" HeightRequest="275" />
+
+            <Image Source="DogWait.png" VerticalOptions="Center" HeightRequest="275" Margin="0,25,0,25"/>
             <Label HorizontalTextAlignment="Center" Text="Make Delicious Meals!" FontSize="20" TextColor="#035A85" FontAttributes="Bold"/>
             <Label Text="Get inspired by viewing everything in your kitchen." HorizontalTextAlignment="Center" FontSize="18" TextColor="Black" Padding="20, 0, 20, 10" />
-            
-            <Image Source="SaveMoney.png" VerticalOptions="Center" HeightRequest="300" />
+
+            <Image Source="SaveMoney.png" VerticalOptions="Center" HeightRequest="300" Margin="0,25,0,25"/>
             <Label HorizontalTextAlignment="Center" Text="Save Money!" FontSize="20" TextColor="#035A85" FontAttributes="Bold"/>
             <Label Text="Using food before it turns bad will help save you money." HorizontalTextAlignment="Center" FontSize="18" TextColor="Black" Padding="20, 0, 20, 30" />
 
-            <Image Source="UNFoodGoals.png" VerticalOptions="Center" HeightRequest="175"/>
+            <Image Source="UNFoodGoals.png" VerticalOptions="Center" HeightRequest="175" Margin="0,25,0,25"/>
             <Label HorizontalTextAlignment="Center" Text="Support the UN Sustainable Development Goals!" FontSize="20" TextColor="#035A85" FontAttributes="Bold" />
-            <Label Text="Fight food waste by eating the food you buy." HorizontalTextAlignment="Center" FontSize="18" TextColor="Black" Padding="20, 0, 20, 10" />
+            <Label Text="Fight food waste by eating the food you buy." HorizontalTextAlignment="Center" FontSize="18" TextColor="Black" Padding="20, 0, 20, 30" />
 
         </StackLayout >
     </ScrollView>
