--- a/FoodSaver/Views/ItemsPage.xaml
+++ b/FoodSaver/Views/ItemsPage.xaml
@@ -15,8 +15,8 @@
         <CollectionView x:Name="ItemsListView" ItemsSource="{Binding Items}" SelectionMode="None">
             <CollectionView.EmptyView > 
                 <StackLayout Padding="10,50,10,0" BackgroundColor="White" >
-                    <Label Text="Don't leave food behind!" FontSize="Large" TextColor="Black" HorizontalOptions="CenterAndExpand"/>
-                    <Image Source="DontleaveFoodBehind.png" HeightRequest="200" HorizontalOptions="CenterAndExpand"/>                    
+                    <Label Text="Don't leave food behind!" FontSize="Title" TextColor="Black" HorizontalOptions="CenterAndExpand"/>
+                    <Image Source="icon.png" HeightRequest="200" HorizontalOptions="CenterAndExpand" Margin="0,50,0,25"/>                    
                     <Grid HorizontalOptions="Center">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
