--- a/FoodSaver/Views/NewItemPage.xaml
+++ b/FoodSaver/Views/NewItemPage.xaml
@@ -7,12 +7,13 @@
              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
              ios:Page.UseSafeArea="true">
     <ContentPage.Content>
-        <StackLayout Spacing="3" Padding="15">
-            <Label Text="Food item:" FontSize="Large" FontAttributes="Bold" TextColor="DarkSlateGray"/>
+        <StackLayout  Padding="10">
+            <Label Text="Food item:" FontSize="24" FontFamily="OpenSansSemiBold" TextColor="DarkSlateGray"/>
             <Entry Text="{Binding Food, Mode=TwoWay}" FontSize="Large" TextColor="DarkSlateGray"/>
-            <Label Text="Expires:" FontSize="Large" FontAttributes="Bold" TextColor="DarkSlateGray"/>
-            <DatePicker Date="{Binding ExpirationDate, Mode=TwoWay}" Format="D" />
-            <TimePicker Time="{Binding ExpirationTime, Mode=TwoWay}" />
+            <Label Text="Expires on:" FontSize="24"  FontFamily="OpenSansSemiBold" TextColor="DarkSlateGray"/>
+            <DatePicker Date="{Binding ExpirationDate, Mode=TwoWay}" Format="D" FontSize="Large"/>
+            <Label Text="Remind me before:" FontSize="24"  FontFamily="OpenSansSemiBold" TextColor="DarkSlateGray"/>
+            <TimePicker Time="{Binding ExpirationTime, Mode=TwoWay}" FontSize="Large" />
             <StackLayout Orientation="Horizontal">
                 <Button Text="Cancel" Command="{Binding CancelCommand}" HorizontalOptions="FillAndExpand"></Button>
                 <Button Text="Save" Command="{Binding SaveCommand}" HorizontalOptions="FillAndExpand"></Button>
