--- a/FoodSaver/Views/LoginPage.xaml
+++ b/FoodSaver/Views/LoginPage.xaml
@@ -8,8 +8,17 @@
              Shell.NavBarIsVisible="False">
     <ContentPage.Content>
         <StackLayout Padding="10,30,10,0" BackgroundColor="White">
-            <!--<Label Text="Food Saver" FontSize="40" HorizontalOptions="Center" FontFamily="OpenSansBold" TextColor="#00ADDF"/>-->
+            <Grid HorizontalOptions="Center"> <!--Makes the logo and the title in the same row-->
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <Label Text="Food Saver" FontSize="40" HorizontalOptions="Center" FontFamily="OpenSansBold" TextColor="#00ADDF"/>
             <Image Source="logoTitle.png" HeightRequest="50" Margin="0, 0, 0, 25"/>
+            </Grid>
             <Image Source="GetCooking.png" HeightRequest="250" />
             <Label Text="A Brilliant App for Managing Food" FontSize="Large" FontFamily="NunitoLight" Margin="10,0,0,30" HorizontalTextAlignment="Center" TextColor="DarkSlateGray"/>
          
