--- a/FoodSaver/Views/ItemsPage.xaml
+++ b/FoodSaver/Views/ItemsPage.xaml
@@ -16,7 +16,7 @@
             <CollectionView.EmptyView > 
                 <StackLayout Padding="10,50,10,0" BackgroundColor="White" >
                     <Label Text="Don't leave food behind!" FontSize="Large" TextColor="Black" FontFamily="OpenSansBold" HorizontalOptions="CenterAndExpand"/>
-                    <Image Source="DontleaveFoodBehind.png" HeightRequest="200" HorizontalOptions="CenterAndExpand"/>                    
+                    <Image Source="icon.png" HeightRequest="200" HorizontalOptions="CenterAndExpand" Margin="0,50,0,0"/>                    
                     <Grid HorizontalOptions="Center">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
@@ -26,9 +26,9 @@
                             <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <Label Grid.Row="0" Grid.Column="0" Text="Tap " FontSize="20" TextColor="Black" FontFamily="NunitoReg" />
-                        <Label Grid.Row="0" Grid.Column="1" Text="+ Add Item" FontSize="20" TextDecorations="Underline" TextColor="Black" FontFamily="NunitoReg"  />
-                        <Label Grid.Row="0" Grid.Column="2" Text= " to add your items." FontSize="20" TextColor="Black" FontFamily="NunitoReg" />                        
+
+                        <Button VerticalOptions="Center" Text="+ Add Item" Clicked="OnAddItem" BackgroundColor="#4285F4" Padding="10,0,10,0" Margin="0,50,0,0" WidthRequest="200"/>
+
                     </Grid>
                 </StackLayout> 
             </CollectionView.EmptyView>            
