--- a/FoodSaver/Views/NewItemPage.xaml
+++ b/FoodSaver/Views/NewItemPage.xaml
@@ -15,8 +15,8 @@
             <Label Text="Remind me at:" FontSize="24"  FontFamily="OpenSansSemiBold" TextColor="DarkSlateGray"/>
             <TimePicker Time="{Binding ExpirationTime, Mode=TwoWay}" FontSize="Large" />
             <StackLayout Orientation="Horizontal">
-                <Button Text="Cancel" Command="{Binding CancelCommand}" HorizontalOptions="FillAndExpand"></Button>
-                <Button Text="Save" Command="{Binding SaveCommand}" HorizontalOptions="FillAndExpand"></Button>
+                <Button Text="Cancel" Command="{Binding CancelCommand}" HorizontalOptions="FillAndExpand" BackgroundColor="#DB4437"/>
+                <Button Text="Save" Command="{Binding SaveCommand}" HorizontalOptions="FillAndExpand"/>
             </StackLayout>
         </StackLayout>
     </ContentPage.Content>
